--- a/patient-manager-react/public/index.html
+++ b/patient-manager-react/public/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  
+  <!--Google Fonts-->
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+  </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Questrial&display=swap');
+  </style>
+    
+
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
